# 22S-advpython

hw01/: ast_graph.py  fib.py  requirements.md
hw01/ast_drawing/: setup.cfg
hw01/ast_drawing/src/my_package/: ast_graph.py
hw02/: Dockerfile  image.py  requirements.txt  tex.py
hw02/artifacts/: Dockerfile  table.tex
hw02/dok/: .bash_history
hw03/: artifacts_gen.py  artifacts_gen_easy.py  artifacts_gen_hard.py  artifacts_gen_medium.py  mixin_matrix.py  my_matrix.py
hw03/artifacts/hard/: A.txt  AB.txt  C.txt  CD.txt  D.txt
hw04/: easy.py  hard.py  medium.py
hw04/artifacts/: easy.md  hard.md  medium.md
hw05/: easy.py
