[metadata]
name = ast-graph-draw-DLochmelis33
version = 0.0.5
author = DLochmelis33
author_email = dlochmelis@gmail.com
description = 22S python course homework package
url = https://github.com/DLochmelis33/22S-advpython
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = my_package
python_requires = >=3.9
install_requires =
    networkx
    matplotlib

[options.packages.find]
where = src
